<resources>
    <string name="app_name">MyDB</string>
    <string name="welcome_to_the_shipit_application">Welcome To The ShipIt application!</string>
    <string name="main_menu">Main Menu</string>
    <string name="shipping_order">Shipping Order</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="track_shipping">TRACK SHIPPING</string>
    <string name="my_orders">MY ORDERS</string>
    <string name="become_carrier">BECOME A CARRIER</string>
    <string name="warehouse_manager">WAREHOUSE MANAGER</string>
    <string name="carriers">CARRIERS</string>
    <string name="customer_reviews">CUSTOMER REVIEWS</string>
    <string name="warehouseManager">Warehouse Manager</string>
    <string name="add_parcel">Add Parcel</string>
    <string name="parcel_history">Parcel History</string>
    <string name="select_parcel_type">Select Parcel Type</string>
    <string name="parcel_contain_fragile_parts">Parcel Contain Fragile Parts ?</string>
    <string name="select_parcel_type_Text">Select Parcel Type</string>
    <string name="select_weight">Select Weight</string>
    <string-array name="parcelTypeArr">
        <item>Envelope</item>
        <item>Small Package</item>
        <item>Large Package</item>
    </string-array>
    <string-array name="fragileContentArr">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string-array name="weight">
        <item>Up To 500 Gram</item>
        <item>Up To 1 Kilogram</item>
        <item>Up To 5 Kilogram</item>
        <item>Up To 20 Kilogram</item>
    </string-array>
    <string-array name="parcel_status">
        <item>Sent</item>
        <item>Someone offered to pick her up</item>
        <item>On the way to destination</item>
        <item>Delivered</item>
    </string-array>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="x">X</string>
    <string name="enter_first_name">Enter first name :</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="insert">Insert</string>
    <string name="name_inserting">Recipient Name</string>
    <string name="recipient_address">Recipient address</string>
    <string name="delivery_details">Delivery Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipient_details">Recipient Details</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_the_phone_number">Enter The Phone Number</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="email_address">Email Address</string>
    <string name="parcel_delivery_date">Parcel Delivery Date yyyy/mm/dd or yyyy-mm-dd or yyyy.mm.dd </string>
    <string name="enter_delivery_date">Enter Delivery Date</string>
    <string name="parcel_status">Parcel Status</string>
    <string name="add">ADD</string>
    <string name="select_date">SELECT DATE</string>
    <string name="carrier_name">Carrier name</string>
    <string name="no">No</string>
    <string name="select_delivery_date">Select Delivery date</string>
    <string name="insert_delivery_date">Insert delivery date</string>
    <string name="button1">Button</string>
    <string name="button2">Button2</string>
    <string name="parcel_id">Parcel ID</string>
    <string name="recipient_name">Recipient Name</string>



</resources>
