<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="150sp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/MyBlue1"
    app:cardElevation="10sp"
    app:layout_constraintCircleAngle="20">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/parcel_Id_his"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20sp"
                    android:paddingRight="20sp"
                    android:text="@string/parcel_id"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/recipient_name_his"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20sp"
                    android:paddingRight="20sp"
                    android:text="@string/recipient_name"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/recipient_address_his"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20sp"
                    android:paddingRight="20sp"
                    android:text="@string/recipient_address"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/recipient_phone_his"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20sp"
                    android:paddingRight="20sp"
                    android:text="@string/phone_number"
                    android:textSize="25sp" />

            </LinearLayout>

        </HorizontalScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:orientation="horizontal"
            android:paddingLeft="5sp"
            android:paddingTop="5sp"
            android:paddingRight="5sp"
            android:paddingBottom="5sp">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.049"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.764" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.764" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="326dp"
                android:layout_height="26dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.066" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>